# an21p.github.io

./: .gitignore  .gitmodules  README.md  config.js  index.html  pyproject.toml  sw.js
.github/workflows/: pages.yml  static.yml
assets/: main.js  manifest.webmanifest  style.css
tests/: conftest.py  test_e2e.py  test_structure.py
